[gd_scene load_steps=10 format=3 uid="uid://b2ie68gemry4d"]

[ext_resource type="Script" uid="uid://dvmchvuxtfmmw" path="res://ui/pick_control.gd" id="1_jhqui"]
[ext_resource type="Theme" uid="uid://cwgp6l14spm0o" path="res://ui/assets/theme.tres" id="2_5grs7"]
[ext_resource type="Shader" uid="uid://nu0e1o8wd5d4" path="res://entities/outline.gdshader" id="3_as7cp"]
[ext_resource type="Texture2D" uid="uid://dwb67e36aikmi" path="res://ui/assets/pick_texture_button/pick_texture_button_nornal.png" id="4_5b4s3"]
[ext_resource type="Texture2D" uid="uid://ldn0aescwsku" path="res://ui/assets/pick_texture_button/pick_texture_button_pressed.png" id="5_usbp4"]
[ext_resource type="Texture2D" uid="uid://drwxxjtt4sm0i" path="res://ui/assets/pick_texture_button/pick_texture_button_hover.png" id="6_c7cnc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vivmo"]
shader = ExtResource("3_as7cp")
shader_parameter/line_color = Color(0.278431, 0.105882, 0.431373, 1)
shader_parameter/line_thickness = 2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2cqfq"]
shader = ExtResource("3_as7cp")
shader_parameter/line_color = Color(0.278431, 0.105882, 0.431373, 1)
shader_parameter/line_thickness = 2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ycdy4"]
shader = ExtResource("3_as7cp")
shader_parameter/line_color = Color(0.278431, 0.105882, 0.431373, 1)
shader_parameter/line_thickness = 2

[node name="PickControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_jhqui")

[node name="ClipControl" type="Control" parent="."]
clip_contents = true
custom_minimum_size = Vector2(630, 140)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -315.0
offset_top = -70.0
offset_right = 315.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Control" type="Control" parent="ClipControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AreasControl" type="Control" parent="ClipControl/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CostControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CostControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -160.0
offset_right = 75.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_5grs7")
alignment = 1

[node name="Label" type="Label" parent="CostControl/HBoxContainer"]
material = SubResource("ShaderMaterial_vivmo")
layout_mode = 2
size_flags_horizontal = 0
theme_type_variation = &"PointsLabel"
text = "Cost:"

[node name="CostLabel" type="Label" parent="CostControl/HBoxContainer"]
unique_name_in_owner = true
modulate = Color(0.870588, 0.545098, 0.435294, 1)
material = SubResource("ShaderMaterial_vivmo")
layout_mode = 2
size_flags_horizontal = 0
theme_type_variation = &"NumberLabel"
text = "0"

[node name="BuyButton" type="Button" parent="CostControl/HBoxContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_2cqfq")
layout_mode = 2
size_flags_horizontal = 10
text = "Buy"
flat = true

[node name="LeftTextureButton" type="TextureButton" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_ycdy4")
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 90.0
offset_top = -20.0
offset_right = 30.0
offset_bottom = 20.0
grow_vertical = 2
texture_normal = ExtResource("4_5b4s3")
texture_pressed = ExtResource("5_usbp4")
texture_hover = ExtResource("6_c7cnc")

[node name="RightTextureButton" type="TextureButton" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_ycdy4")
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -20.0
offset_right = -90.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
texture_normal = ExtResource("4_5b4s3")
texture_pressed = ExtResource("5_usbp4")
texture_hover = ExtResource("6_c7cnc")
flip_h = true
